[gd_scene load_steps=9 format=2]

[ext_resource path="res://fonts/OldNewspaperTypes.ttf" type="DynamicFontData" id=1]
[ext_resource path="res://sounds/menu_song.wav" type="AudioStream" id=2]
[ext_resource path="res://scripts/menu.gd" type="Script" id=3]

[sub_resource type="DynamicFont" id=1]
size = 70
font_data = ExtResource( 1 )

[sub_resource type="DynamicFont" id=2]
size = 50
font_data = ExtResource( 1 )

[sub_resource type="DynamicFont" id=3]
size = 50
font_data = ExtResource( 1 )

[sub_resource type="Animation" id=4]
resource_name = "fade"
length = 3.0
tracks/0/type = "value"
tracks/0/path = NodePath(".:modulate")
tracks/0/interp = 1
tracks/0/loop_wrap = true
tracks/0/imported = false
tracks/0/enabled = true
tracks/0/keys = {
"times": PoolRealArray( 0, 3 ),
"transitions": PoolRealArray( 1, 1 ),
"update": 0,
"values": [ Color( 0, 0, 0, 1 ), Color( 0, 0, 0, 0 ) ]
}

[sub_resource type="ParticlesMaterial" id=5]
emission_shape = 2
emission_box_extents = Vector3( 500, 1, 1 )
flag_disable_z = true
direction = Vector3( 0, -1, 0 )
spread = 1.0
gravity = Vector3( 0, 0, 0 )
initial_velocity = 100.0
orbit_velocity = 0.0
orbit_velocity_random = 0.0
angle = 45.0
angle_random = 1.0
scale = 10.0
scale_random = 1.0

[node name="CanvasLayer" type="CanvasLayer"]
script = ExtResource( 3 )

[node name="Background" type="ColorRect" parent="."]
anchor_right = 1.0
anchor_bottom = 1.0
color = Color( 0, 0, 0, 1 )
__meta__ = {
"_edit_use_anchors_": false
}

[node name="Control" type="Control" parent="."]
anchor_right = 1.0
anchor_bottom = 1.0
__meta__ = {
"_edit_use_anchors_": false
}

[node name="VBoxContainer" type="VBoxContainer" parent="Control"]
anchor_right = 1.0
anchor_bottom = 1.0
__meta__ = {
"_edit_use_anchors_": false
}

[node name="Title" type="Label" parent="Control/VBoxContainer"]
margin_top = 105.0
margin_right = 1024.0
margin_bottom = 192.0
size_flags_vertical = 6
custom_fonts/font = SubResource( 1 )
text = "Larry, The Skeleton"
align = 1
valign = 1
uppercase = true

[node name="HBoxContainer" type="HBoxContainer" parent="Control/VBoxContainer"]
margin_top = 302.0
margin_right = 1024.0
margin_bottom = 600.0
size_flags_vertical = 3

[node name="Control" type="Control" parent="Control/VBoxContainer/HBoxContainer"]
margin_right = 201.0
margin_bottom = 298.0
size_flags_horizontal = 3

[node name="VBoxContainer" type="VBoxContainer" parent="Control/VBoxContainer/HBoxContainer"]
margin_left = 205.0
margin_right = 406.0
margin_bottom = 298.0
size_flags_horizontal = 3

[node name="Play" type="Label" parent="Control/VBoxContainer/HBoxContainer/VBoxContainer"]
margin_top = 85.0
margin_right = 201.0
margin_bottom = 147.0
mouse_filter = 1
mouse_default_cursor_shape = 2
size_flags_horizontal = 3
size_flags_vertical = 10
custom_fonts/font = SubResource( 2 )
text = "Play"
valign = 1
uppercase = true

[node name="Quit" type="Label" parent="Control/VBoxContainer/HBoxContainer/VBoxContainer"]
margin_top = 151.0
margin_right = 201.0
margin_bottom = 213.0
mouse_filter = 1
mouse_default_cursor_shape = 2
size_flags_horizontal = 3
size_flags_vertical = 2
custom_fonts/font = SubResource( 3 )
text = "Quit"
valign = 1
uppercase = true

[node name="Control2" type="Control" parent="Control/VBoxContainer/HBoxContainer"]
margin_left = 410.0
margin_right = 611.0
margin_bottom = 298.0
size_flags_horizontal = 3

[node name="Control3" type="Control" parent="Control/VBoxContainer/HBoxContainer"]
margin_left = 615.0
margin_right = 816.0
margin_bottom = 298.0
size_flags_horizontal = 3

[node name="Control4" type="Control" parent="Control/VBoxContainer/HBoxContainer"]
margin_left = 820.0
margin_right = 1024.0
margin_bottom = 298.0
size_flags_horizontal = 3

[node name="Fade" type="Control" parent="."]
anchor_right = 1.0
anchor_bottom = 1.0
__meta__ = {
"_edit_use_anchors_": false
}

[node name="ColorRect" type="ColorRect" parent="Fade"]
modulate = Color( 0, 0, 0, 1 )
anchor_right = 1.0
anchor_bottom = 1.0
color = Color( 0, 0, 0, 1 )
__meta__ = {
"_edit_use_anchors_": false
}

[node name="AnimationPlayer" type="AnimationPlayer" parent="Fade/ColorRect"]
autoplay = "fade"
anims/fade = SubResource( 4 )

[node name="Particles2D" type="Particles2D" parent="."]
position = Vector2( 512, 600 )
amount = 15
lifetime = 7.0
local_coords = false
process_material = SubResource( 5 )

[node name="MenuSong" type="AudioStreamPlayer" parent="."]
stream = ExtResource( 2 )
volume_db = -15.0
autoplay = true
[connection signal="gui_input" from="Control/VBoxContainer/HBoxContainer/VBoxContainer/Play" to="." method="_on_Play_gui_input"]
[connection signal="gui_input" from="Control/VBoxContainer/HBoxContainer/VBoxContainer/Quit" to="." method="_on_Quit_gui_input"]
[connection signal="animation_finished" from="Fade/ColorRect/AnimationPlayer" to="." method="_on_AnimationPlayer_animation_finished"]
